Modified build.xml files to remove all targets and add new ones. Target for creating war and deploying war to the local Tomcat were added.
SVN-Revision: 540